2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* examples/foldlist/foldlist.kahua : added foldlist sample program.
	* examples/Makefile : added foldlist.kahua entry
	* test/Makefile, test/foldlist.scm : added test for foldlist.kahua
	
2004-03-01  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

        * src/kahua-spvr.in : support restarting the unexpected terminated
        worker.
        * src/kahua/config.scm : added "auto-restart" slot to <kahua-config>
        to enable above support.
        * cgi/kahua.cgi (compose-reply): changed default content-type as
        "text/html; charset=euc-jp".	

2004-02-29  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/elem.scm: added functional tags extra-header: and
	extra-header/
	* examples/login/login.kahua: use extra-header: instead of symbol.

2004-02-29  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-db-open-dbi): handles
	<dbi-exception> correctly.
	* test/persistence-dbi.scm : handles <dbi-exception> correctly.

2004-02-29  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin.in : add moduser command that changes password.
	* src/kahua/developer.scm :
	(developer-password-set!): bug fixed.
	(developer-roles-set!): added.
	(find-developer): user does not found, raise error.
	(kahua-change-developer-password): removed old-password argument
	and added validation for new-password.

2004-02-28  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm :
	(kahua-persistent-classes-in-db):
	(kahua-persistent-class-generation):
	(kahua-persistent-class-definition): added metalevel API.
	(translate-up, translate-down): fixed a bug that caused an error
	when upgrading databases created by older kahua.persistence.
	(autoloads): make the test pass without dbi.

2004-02-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-object reader): check if the
	generation of instance is newer than currently recorded in-db class
	generation, and if so, re-read metainfo.